adding abstract pictures

--- a/index.html
+++ b/index.html
@@ -43,10 +43,10 @@ title: Home
 <div class="card container mx-auto px-2 mb-4 clearfix header-text">
     <div class="subheader mt-1 py-2" style="display: flex;align-items: center;flex-flow: wrap; justify-content:center;">
         <div style="width: 38em; margin-bottom:5em;">
-                <span class="project-descriptions">
+                <p class="project-descriptions" style="width: 30em">
                     Leading a 4-person team in <span class="blue">developing</span> an end-to-end
                     hospitality management system that helps college students rent out their places while they’re away on breaks.
-                </span>
+                </p>
             <a href='about/rerent.html'>Read more </a><span class="blue">&rarr;</span>
             <span class="home-bottom"></span>
         </div>
@@ -192,8 +192,10 @@ title: Home
                 August 2019 — Present
             </p>
             <p class="project-descriptions" style="width: 30em">
-                Student <span class="blue">researcher</span>. Previously at Prof. Stephanie Halene's lab (Yale), now working at
-                Prof. Xihong Lin's lab (Harvard).
+                Student <span class="blue">researcher</span> determined to crack the <span class="blue">code</span>
+                of life. Previously at <a href="https://medicine.yale.edu/lab/halene/">Prof. Stephanie Halene's lab</a>
+                (Yale), now working at <a href="https://content.sph.harvard.edu/xlin/index.html">Prof. Xihong Lin's lab</a>
+                (Harvard).
             </p>
             <br>
             <div>
