--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@ title: Home
     <div class="subheader mt-1 py-2" style="display: flex;align-items: center;flex-flow: wrap; justify-content:center;">
         <div style="width: 38em; margin-bottom:5em;">
                 <p class="project-descriptions" style="width: 30em">
-                    Leading a 4-person team in <span class="blue">developing</span> an end-to-end
+                    Product management intern leading a 4-person team in <span class="blue">developing</span> an end-to-end
                     hospitality management system that helps college students rent out their places while they’re away on breaks.
                 </p>
             <a href='about/rerent.html'>Read more </a><span class="blue">&rarr;</span>
@@ -193,9 +193,9 @@ title: Home
             </p>
             <p class="project-descriptions" style="width: 30em">
                 Student <span class="blue">researcher</span> determined to crack the <span class="blue">code</span>
-                of life. Previously at <a href="https://medicine.yale.edu/lab/halene/">Prof. Stephanie Halene's lab</a>
-                (Yale), now working at <a href="https://content.sph.harvard.edu/xlin/index.html">Prof. Xihong Lin's lab</a>
-                (Harvard).
+                of life. Previously at <a href="https://medicine.yale.edu/lab/halene/" class="underline">Prof. Stephanie Halene's lab</a>
+                <span style="font-size: 70%">(Yale)</span>, now working at <a href="https://content.sph.harvard.edu/xlin/index.html" class="underline">Prof. Xihong Lin's lab</a>
+                <span style="font-size: 70%">(Harvard)</span>.
             </p>
             <br>
             <div>
@@ -210,7 +210,7 @@ title: Home
                         </a>
                     </li>
                 </ul>
-                <img src="/media/abstract1.png.png" class="img_dataprojects" alt="ASH-ley abstracts 1"
+                <img src="/media/abstract1.png" class="img_dataprojects" alt="ASH-ley's abstracts 1"
                      style="max-width:400px;">
                 <ul style="margin-left: 3em">
                     <li>
@@ -220,7 +220,7 @@ title: Home
                         </a>
                     </li>
                 </ul>
-                <img src="/media/abstract2.png.png" class="img_dataprojects" alt="ASH-ley abstracts 2"
+                <img src="/media/abstract2.png" class="img_dataprojects" alt="ASH-ley's abstracts 2"
                      style="max-width:400px;">
                 <ul style="margin-left: 3em">
                     <li>
@@ -230,7 +230,7 @@ title: Home
                         </a>
                     </li>
                 </ul>
-                <img src="/media/abstract3.png.png" class="img_dataprojects" alt="ASH-ley abstracts 3"
+                <img src="/media/abstract3.png" class="img_dataprojects" alt="ASH-ley's abstracts 3"
                      style="max-width:400px;">
             </div>
         </div>
