--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@ title: Home
 </div>
 <div class="card container mx-auto px-2 mb-4 clearfix header-text">
     <div class="subheader mt-1 py-2" style="display: flex;align-items: center;flex-flow: wrap; justify-content:center;">
-        <div style="width: 34em; margin-bottom:5em;">
-                <p class="project-descriptions" style="width: 30em">
+        <div style="width: 36em; margin-bottom:5em;">
+                <p class="project-descriptions" style="width: 27em">
                     Product management intern leading a 4-person team in <span class="blue">developing</span> an end-to-end
                     hospitality management system that helps college students rent out their places while they’re away on breaks.
                 </p>
@@ -92,7 +92,7 @@ title: Home
                         </a>
                     </li>
                 </ul>
-                <div class='tableauPlaceholder' id='viz1600286215547' style='position: center; margin-top: 1em'>
+                <div class='tableauPlaceholder' id='viz1600286215547' style='position: center; margin-top: 2em'>
                     <noscript><a
                             href='http:&#47;&#47;features.yaledailynews.com&#47;blog&#47;2020&#47;04&#47;24&#47;analysis-a-shifting-demographic-for-storied-yale-crew-international-athletes-elevate-the-elis&#47;'><img
                             alt=' '
@@ -134,7 +134,7 @@ title: Home
                         </a>
                     </li>
                 </ul>
-                <div class='tableauPlaceholder' id='viz1600266083672' style='position: center; margin-top: 1em'>
+                <div class='tableauPlaceholder' id='viz1600266083672' style='position: center; margin-top: 2em'>
                     <noscript><a
                             href='https:&#47;&#47;yaledailynews.com&#47;commencement2020&#47;2020&#47;05&#47;15&#47;yale-class-of-2020-by-the-numbers&#47;'><img
                             alt=' '
@@ -191,7 +191,8 @@ title: Home
                 <br>
                 August 2019 — Present
             </p>
-            <p class="project-descriptions">
+<!--            <p class="project-descriptions">-->
+            <p style="font-size: 150%; margin-bottom: 0.5em; margin-top: 2em; line-height: 1.6;">
                 Student <span class="blue">researcher</span> determined to crack the <span class="blue">code</span>
                 of life. Previously at <br><a href="https://medicine.yale.edu/lab/halene/" class="underline">Prof. Stephanie Halene's lab</a>
                 <span style="font-size: 70%">(Yale)</span>, now working at <a href="https://content.sph.harvard.edu/xlin/index.html" class="underline">Prof. Xihong Lin's lab</a>
