--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@ title: Home
 <div class="card container mx-auto px-2 mb-4 clearfix header-text">
     <div class="subheader mt-1 py-2" style="display: flex;align-items: center;flex-flow: wrap; justify-content:center;">
         <div style="width: 36em; margin-bottom:5em;">
-                <p class="project-descriptions" style="width: 27em">
+                <p class="project-descriptions" style="width: 26em; margin-left: 1em">
                     Product management intern leading a 4-person team in <span class="blue">developing</span> an end-to-end
                     hospitality management system that helps college students rent out their places while they’re away on breaks.
                 </p>
@@ -92,7 +92,7 @@ title: Home
                         </a>
                     </li>
                 </ul>
-                <div class='tableauPlaceholder' id='viz1600286215547' style='position: center; margin-top: 2em'>
+                <div class='tableauPlaceholder' id='viz1600286215547' style='position: center; margin-top: 2em; left: 50%'>
                     <noscript><a
                             href='http:&#47;&#47;features.yaledailynews.com&#47;blog&#47;2020&#47;04&#47;24&#47;analysis-a-shifting-demographic-for-storied-yale-crew-international-athletes-elevate-the-elis&#47;'><img
                             alt=' '
@@ -134,7 +134,7 @@ title: Home
                         </a>
                     </li>
                 </ul>
-                <div class='tableauPlaceholder' id='viz1600266083672' style='position: center; margin-top: 2em'>
+                <div class='tableauPlaceholder' id='viz1600266083672' style='position: center; margin-top: 2em; left: 50%; width: 120%'>
                     <noscript><a
                             href='https:&#47;&#47;yaledailynews.com&#47;commencement2020&#47;2020&#47;05&#47;15&#47;yale-class-of-2020-by-the-numbers&#47;'><img
                             alt=' '
