--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@ title: Home
 </div>
 <div class="card container mx-auto px-2 mb-4 clearfix header-text">
     <div class="subheader mt-1 py-2" style="display: flex;align-items: center;flex-flow: wrap; justify-content:center;">
-        <div style="width: 36em; margin-bottom:5em;">
-                <p class="project-descriptions" style="width: 26em; margin-left: 1em">
+        <div style="width: 36em; margin-bottom:5em; margin-left: 1.5em">
+                <p class="project-descriptions" style="width: 26em;">
                     Product management intern leading a 4-person team in <span class="blue">developing</span> an end-to-end
                     hospitality management system that helps college students rent out their places while they’re away on breaks.
                 </p>
@@ -92,7 +92,7 @@ title: Home
                         </a>
                     </li>
                 </ul>
-                <div class='tableauPlaceholder' id='viz1600286215547' style='position: center; margin-top: 2em; left: 50%'>
+                <div class='tableauPlaceholder' id='viz1600286215547' style='position: relative; margin-top: 2em; left: 50%'>
                     <noscript><a
                             href='http:&#47;&#47;features.yaledailynews.com&#47;blog&#47;2020&#47;04&#47;24&#47;analysis-a-shifting-demographic-for-storied-yale-crew-international-athletes-elevate-the-elis&#47;'><img
                             alt=' '
@@ -134,7 +134,7 @@ title: Home
                         </a>
                     </li>
                 </ul>
-                <div class='tableauPlaceholder' id='viz1600266083672' style='position: center; margin-top: 2em; left: 50%; width: 120%'>
+                <div class='tableauPlaceholder centered' id='viz1600266083672' style='width: 120%'>
                     <noscript><a
                             href='https:&#47;&#47;yaledailynews.com&#47;commencement2020&#47;2020&#47;05&#47;15&#47;yale-class-of-2020-by-the-numbers&#47;'><img
                             alt=' '
@@ -184,19 +184,20 @@ title: Home
          style="display: flex;align-items: center;flex-flow: wrap; justify-content:center;">
         <div class="wide sep" style="margin-top: 1em">
             <div class="project-title">
-                Research/Publications
+                Research
             </div>
             <p>
                 Bioinformatics
                 <br>
                 August 2019 — Present
             </p>
-<!--            <p class="project-descriptions">-->
-            <p style="font-size: 150%; margin-bottom: 0.5em; margin-top: 2em; line-height: 1.6;">
-                Student <span class="blue">researcher</span> determined to crack the <span class="blue">code</span>
-                of life. Previously at <br><a href="https://medicine.yale.edu/lab/halene/" class="underline">Prof. Stephanie Halene's lab</a>
-                <span style="font-size: 70%">(Yale)</span>, now working at <a href="https://content.sph.harvard.edu/xlin/index.html" class="underline">Prof. Xihong Lin's lab</a>
-                <span style="font-size: 70%">(Harvard)</span>.
+            <p class="project-descriptions" style="padding: 50px">
+<!--            <p style="font-size: 150%; margin-bottom: 0.5em; margin-top: 2em; line-height: 1.6;">-->
+                Student <span class="blue">researcher</span>. Determined to replace medical diagnoses with <span class="blue">
+                prognoses</span>. Previously at <br><a href="https://medicine.yale.edu/lab/halene/" class="underline">Prof. Stephanie Halene's lab</a>
+                <span style="font-size: 70%">(Yale)</span>. Now at <a href="https://content.sph.harvard.edu/xlin/index.html" class="underline">Prof. Xihong Lin's lab</a>
+                <span style="font-size: 70%">(Harvard)</span>, working on a project that centers on the concept that
+                multiple small genetic variations can accumulate to cause complex, but common diseases <span style="font-size: 70%">(e.g. type 2 diabetes)</span>.
             </p>
             <br>
             <div>
@@ -205,9 +206,12 @@ title: Home
                 </p>
                 <ul style="margin-left: 3em">
                     <li>
+                        Mutations in the gene coding for the U2AF1 protein are known to be responsible for many cases of
+                        acute myeloid leukemia (AML). However, very little is known about how these mutations lead to disease.
+                        Our analysis found that these mutated proteins may cause AML by abnormally modifying other genes
+                        involved in the essential processes of the cell cycle and DNA repair.
                         <a href="https://ashpublications.org/blood/article/134/Supplement_1/1230/426742/U2AF1-Driver-Mutations-in-Hematopoietic-Disorders?searchresult=1"
-                            style="font-size: 110%">
-                            Read abstract <span class="blue">&rarr;</span>
+                            style="font-size: 110%">Read abstract <span class="blue">&rarr;</span>
                         </a>
                     </li>
                 </ul>
@@ -215,6 +219,10 @@ title: Home
                      style="max-width:400px;">
                 <ul style="margin-left: 3em">
                     <li>
+                        In the past, mice have been "humanized" with human stem cell grafts in order to act as
+                        more accurate models for experimentation. However, all of these previous mouse models lack
+                        mature human blood cells, which are essential for studies of blood-related diseases, such as
+                        leukemia. Our team generated the first humanized mice with fully matured blood cells.
                         <a href="https://ashpublications.org/blood/article/134/Supplement_1/338/426253/In-Vivo-reconstruction-of-Human-Erythropoiesis?searchresult=1"
                             style="font-size: 110%">
                             Read abstract <span class="blue">&rarr;</span>
@@ -225,6 +233,10 @@ title: Home
                      style="max-width:400px;">
                 <ul style="margin-left: 3em">
                     <li>
+                        DNA repair is known to be abnormal in individuals with acute myeloid leukemia (AML). When a protein
+                        essential for DNA repair called PARP was inhibited, we found that leukemia-initiating cells were
+                        reduced in mice engrafted with AML. This suggests that PARP inhibitors could be a potential
+                        treatment option for AML.
                         <a href="https://ashpublications.org/blood/article/134/Supplement_1/4222/425718/PARP-Inhibitors-Are-Effective-in-IDH1-2-Mutant-MDS?searchresult=1"
                             style="font-size: 110%">
                             Read abstract <span class="blue">&rarr;</span>
