fix formatting, open links in new tab

--- a/index.html
+++ b/index.html
@@ -191,13 +191,12 @@ title: Home
                 <br>
                 August 2019 — Present
             </p>
-            <p class="project-descriptions" style="padding: 50px">
+            <p class="project-descriptions">
 <!--            <p style="font-size: 150%; margin-bottom: 0.5em; margin-top: 2em; line-height: 1.6;">-->
                 Student <span class="blue">researcher</span>. Determined to replace medical diagnoses with <span class="blue">
-                prognoses</span>. Previously at <br><a href="https://medicine.yale.edu/lab/halene/" class="underline">Prof. Stephanie Halene's lab</a>
-                <span style="font-size: 70%">(Yale)</span>. Now at <a href="https://content.sph.harvard.edu/xlin/index.html" class="underline">Prof. Xihong Lin's lab</a>
-                <span style="font-size: 70%">(Harvard)</span>, working on a project that centers on the concept that
-                multiple small genetic variations can accumulate to cause complex, but common diseases <span style="font-size: 70%">(e.g. type 2 diabetes)</span>.
+                prognoses</span>. Previously at <br><a href="https://medicine.yale.edu/lab/halene/" class="underline" target="_blank">Prof. Stephanie Halene's lab</a>
+                <span style="font-size: 70%">(Yale)</span>, now at <a href="https://content.sph.harvard.edu/xlin/index.html" class="underline" target="_blank">Prof. Xihong Lin's lab</a>
+                <span style="font-size: 70%">(Harvard)</span>.
             </p>
             <br>
             <div>
@@ -205,26 +204,31 @@ title: Home
                     Published work:
                 </p>
                 <ul style="margin-left: 3em">
-                    <li>
+                    <li style="line-height: 1.6">
                         Mutations in the gene coding for the U2AF1 protein are known to be responsible for many cases of
                         acute myeloid leukemia (AML). However, very little is known about how these mutations lead to disease.
                         Our analysis found that these mutated proteins may cause AML by abnormally modifying other genes
                         involved in the essential processes of the cell cycle and DNA repair.
+                        <br>
+                        <br>
                         <a href="https://ashpublications.org/blood/article/134/Supplement_1/1230/426742/U2AF1-Driver-Mutations-in-Hematopoietic-Disorders?searchresult=1"
-                            style="font-size: 110%">Read abstract <span class="blue">&rarr;</span>
+                            style="font-size: 110%" target="_blank">Read abstract <span class="blue">&rarr;</span>
                         </a>
                     </li>
                 </ul>
                 <img src="/media/abstract1.png" class="img_dataprojects" alt="ASH-ley's abstracts 1"
                      style="max-width:400px;">
+                <br>
                 <ul style="margin-left: 3em">
                     <li>
                         In the past, mice have been "humanized" with human stem cell grafts in order to act as
                         more accurate models for experimentation. However, all of these previous mouse models lack
                         mature human blood cells, which are essential for studies of blood-related diseases, such as
                         leukemia. Our team generated the first humanized mice with fully matured blood cells.
+                        <br>
+                        <br>
                         <a href="https://ashpublications.org/blood/article/134/Supplement_1/338/426253/In-Vivo-reconstruction-of-Human-Erythropoiesis?searchresult=1"
-                            style="font-size: 110%">
+                            style="font-size: 110%" target="_blank">
                             Read abstract <span class="blue">&rarr;</span>
                         </a>
                     </li>
@@ -237,8 +241,10 @@ title: Home
                         essential for DNA repair called PARP was inhibited, we found that leukemia-initiating cells were
                         reduced in mice engrafted with AML. This suggests that PARP inhibitors could be a potential
                         treatment option for AML.
+                        <br>
+                        <br>
                         <a href="https://ashpublications.org/blood/article/134/Supplement_1/4222/425718/PARP-Inhibitors-Are-Effective-in-IDH1-2-Mutant-MDS?searchresult=1"
-                            style="font-size: 110%">
+                            style="font-size: 110%" target="_blank">
                             Read abstract <span class="blue">&rarr;</span>
                         </a>
                     </li>
