fix random floating image

--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@ title: Home
                         </a>
                     </li>
                 </ul>
-                <img src="/media/abstract1.png" class="img_dataprojects centered" alt="ASH-ley's abstracts 1"
+                <img src="/media/abstract1.png" class="img_abstracts" alt="ASH-ley's abstracts 1"
                      style="max-width:400px;">
                 <br>
                 <ul style="margin-left: 3em">
@@ -236,7 +236,7 @@ title: Home
                         </a>
                     </li>
                 </ul>
-                <img src="/media/abstract2.png" class="img_dataprojects" alt="ASH-ley's abstracts 2"
+                <img src="/media/abstract2.png" class="img_abstracts" alt="ASH-ley's abstracts 2"
                      style="max-width:400px;">
                 <ul style="margin-left: 3em">
                     <li style="line-height: 1.7">
@@ -252,7 +252,7 @@ title: Home
                         </a>
                     </li>
                 </ul>
-                <img src="/media/abstract3.png" class="img_dataprojects" alt="ASH-ley's abstracts 3"
+                <img src="/media/abstract3.png" class="img_abstracts" alt="ASH-ley's abstracts 3"
                      style="max-width:400px;">
             </div>
         </div>
