--- a/index.html
+++ b/index.html
@@ -73,7 +73,8 @@ title: Home
 </div>
 <div class="card container mx-auto px-2 mb-4 clearfix header-text">
     <div class="subheader mt-1 py-2"
-         style="display: flex;align-items: center;flex-flow: wrap; justify-content:left;">
+         style="display: block">
+<!--         style="display: flex;align-items: center;flex-flow: wrap; justify-content:left;">-->
         <div style="width: 35em; margin-bottom:5em; margin-left: 2em">
             <p class="project-descriptions" style="width: 30em">
                 <span class="blue">Data analyst</span> and <span class="blue">editor</span> for the Yale Daily News.
@@ -97,7 +98,7 @@ title: Home
     </div>
 </div>
 <div class='tableauPlaceholder' id='viz1600286215547'
-     style='margin-top: 2em; align-items: center; width: 70%'>
+     style='margin-top: 2em; align-items: center; width: 40em;'>
     <noscript><a
             href='http:&#47;&#47;features.yaledailynews.com&#47;blog&#47;2020&#47;04&#47;24&#47;analysis-a-shifting-demographic-for-storied-yale-crew-international-athletes-elevate-the-elis&#47;'><img
             alt=' '
@@ -227,7 +228,7 @@ title: Home
                 </ul>
                 <br>
                 <img src="/media/abstract1.png" class="img_abstracts" alt="ASH-ley's abstracts 1"
-                     style="width: 180%">
+                     style="width: 60%">
                 <br>
                 <ul style="margin-left: 3em">
                     <li style="line-height: 1.7">
@@ -244,7 +245,7 @@ title: Home
                     </li>
                 </ul>
                 <img src="/media/abstract2.png" class="img_abstracts" alt="ASH-ley's abstracts 2"
-                     style="width: 190%">
+                     style="width: 60%">
                 <ul style="margin-left: 3em">
                     <li style="line-height: 1.7">
                         DNA repair is known to be abnormal in individuals with acute myeloid leukemia (AML). When a protein
@@ -260,7 +261,7 @@ title: Home
                     </li>
                 </ul>
                 <img src="/media/abstract3.png" class="img_abstracts" alt="ASH-ley's abstracts 3"
-                     style="width: 200%">
+                     style="width: 70%">
             </div>
         </div>
     </div>
