--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@ title: Home
 <div class="card container mx-auto px-2 mb-4 clearfix header-text">
     <div class="subheader mt-1 py-2" style="display: flex;align-items: center;flex-flow: wrap; justify-content:center;">
         <div style="width: 33em; margin-bottom:5em; margin-left: 2em">
-                <p class="project-descriptions" style="width: 26em;">
+                <p class="project-descriptions">
                     Product management intern leading a 4-person team in <span class="blue">developing</span> an end-to-end
                     hospitality management system that helps college students rent out their places while they’re away on breaks.
                 </p>
@@ -73,10 +73,9 @@ title: Home
 </div>
 <div class="card container mx-auto px-2 mb-4 clearfix header-text">
     <div class="subheader mt-1 py-2"
-         style="display: block">
-<!--         style="display: flex;align-items: center;flex-flow: wrap; justify-content:left;">-->
-        <div style="width: 35em; margin-bottom:5em; margin-left: 2em">
-            <p class="project-descriptions" style="width: 30em">
+         style="display: flex;align-items: center;flex-flow: wrap; justify-content:left;">
+        <div style="max-width: 35em; margin-bottom:5em; margin-left: 2em">
+            <p class="project-descriptions">
                 <span class="blue">Data analyst</span> and <span class="blue">editor</span> for the Yale Daily News.
                 Telling stories with data and making
                 key insights free and accessible for all.
@@ -98,7 +97,7 @@ title: Home
     </div>
 </div>
 <div class='tableauPlaceholder' id='viz1600286215547'
-     style='margin-top: 2em; align-items: center; width: 40em;'>
+     style='margin-top: 2em; align-items: center; max-width: 40em;'>
     <noscript><a
             href='http:&#47;&#47;features.yaledailynews.com&#47;blog&#47;2020&#47;04&#47;24&#47;analysis-a-shifting-demographic-for-storied-yale-crew-international-athletes-elevate-the-elis&#47;'><img
             alt=' '
