--- a/index.html
+++ b/index.html
@@ -42,7 +42,8 @@ title: Home
 </div>
 <div class="card container mx-auto px-2 mb-4 clearfix header-text">
     <div class="subheader mt-1 py-2" style="display: flex;align-items: center;flex-flow: wrap; justify-content:center;">
-        <div style="width: 33em; margin-bottom:5em; margin-left: 2em">
+        <img class="img_projects" src="/media/rerent_mockup.png" alt="rerent">
+        <div style="width: 33em; margin-bottom:5em; margin-left: 1.7em">
                 <p class="project-descriptions">
                     Product management intern leading a 4-person team in <span class="blue">developing</span> an end-to-end
                     hospitality management system that helps college students rent out their places while they’re away on breaks.
@@ -50,7 +51,6 @@ title: Home
             <a href='about/rerent.html'>Read more </a><span class="blue">&rarr;</span>
             <span class="home-bottom"></span>
         </div>
-        <img class="img_projects" src="/media/rerent_mockup.png" alt="rerent">
     </div>
 </div>
 
@@ -93,11 +93,12 @@ title: Home
                     </a>
                 </li>
             </ul>
+            <span class="home-bottom"></span>
         </div>
     </div>
 </div>
 <div class='tableauPlaceholder' id='viz1600286215547'
-     style='margin-top: 2em; align-items: center; max-width: 40em;'>
+     style='margin-top: 2em; align-items: center; max-width: 500px;'>
     <noscript><a
             href='http:&#47;&#47;features.yaledailynews.com&#47;blog&#47;2020&#47;04&#47;24&#47;analysis-a-shifting-demographic-for-storied-yale-crew-international-athletes-elevate-the-elis&#47;'><img
             alt=' '
