--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@ title: Home
 <div class="card container mx-auto px-2 mb-4 clearfix header-text">
     <div class="subheader mt-1 py-2" style="display: flex;align-items: center;flex-flow: wrap; justify-content:center;">
         <img class="img_projects" src="/media/rerent_mockup.png" alt="rerent">
-        <div style="width: 33em; margin-bottom:5em; margin-left: 1.7em">
+        <div style="width: 34em; margin-bottom:5em; margin-left: 2em">
                 <p class="project-descriptions">
                     Product management intern leading a 4-person team in <span class="blue">developing</span> an end-to-end
                     hospitality management system that helps college students rent out their places while they’re away on breaks.
@@ -93,12 +93,12 @@ title: Home
                     </a>
                 </li>
             </ul>
-            <span class="home-bottom"></span>
+<!--            <span class="home-bottom"></span>-->
         </div>
     </div>
 </div>
 <div class='tableauPlaceholder' id='viz1600286215547'
-     style='margin-top: 2em; align-items: center; max-width: 500px;'>
+     style='margin-top: 2em; align-items: center; max-width: 800px;'>
     <noscript><a
             href='http:&#47;&#47;features.yaledailynews.com&#47;blog&#47;2020&#47;04&#47;24&#47;analysis-a-shifting-demographic-for-storied-yale-crew-international-athletes-elevate-the-elis&#47;'><img
             alt=' '
@@ -261,7 +261,7 @@ title: Home
                     </li>
                 </ul>
                 <img src="/media/abstract3.png" class="img_abstracts" alt="ASH-ley's abstracts 3"
-                     style="width: 70%">
+                     style="width: 75%">
             </div>
         </div>
     </div>
