--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@ title: Home
 </div>
 <div class="card container mx-auto px-2 mb-4 clearfix header-text">
     <div class="subheader mt-1 py-2" style="display: flex;align-items: center;flex-flow: wrap; justify-content:center;">
-        <div style="width: 34em; margin-bottom:5em; margin-left: 2em">
+        <div style="width: 38em; margin-bottom:5em; margin-left: 1em">
                 <p class="project-descriptions">
                     Product management intern leading a 4-person team in <span class="blue">developing</span> an end-to-end
                     hospitality management system that helps college students rent out their places while they’re away on breaks.
@@ -92,7 +92,7 @@ title: Home
     </div>
 </div>
 <div class='tableauPlaceholder' id='viz1600286215547'
-     style='margin-top: 2em; align-items: center;'>
+     style='margin-top: 2em; align-items: center; margin-left: 1em'>
     <noscript><a
             href='http:&#47;&#47;features.yaledailynews.com&#47;blog&#47;2020&#47;04&#47;24&#47;analysis-a-shifting-demographic-for-storied-yale-crew-international-athletes-elevate-the-elis&#47;'><img
             alt=' '
