--- a/index.html
+++ b/index.html
@@ -92,7 +92,8 @@ title: Home
     </div>
 </div>
 <div class='tableauPlaceholder' id='viz1600286215547'
-     style='margin-top: 2em; align-items: center; max-width:50%; max-height:50%;'>
+     style="display: flex;align-items: center;flex-flow: wrap; justify-content:center;">
+<!--     style='margin-top: 2em; align-items: center; max-width:50%; max-height:50%;'>-->
     <noscript><a
             href='http:&#47;&#47;features.yaledailynews.com&#47;blog&#47;2020&#47;04&#47;24&#47;analysis-a-shifting-demographic-for-storied-yale-crew-international-athletes-elevate-the-elis&#47;'><img
             alt=' '
