--- a/index.html
+++ b/index.html
@@ -92,8 +92,7 @@ title: Home
     </div>
 </div>
 <div class='tableauPlaceholder' id='viz1600286215547'
-     style="display: flex;align-items: center;flex-flow: wrap; justify-content:center; max-width:50%; max-height:50%;">
-<!--     style='margin-top: 2em; align-items: center; max-width:50%; max-height:50%;'>-->
+     style="display: flex;align-items: center;flex-flow: wrap; justify-content:center; max-height:50%;">
     <noscript><a
             href='http:&#47;&#47;features.yaledailynews.com&#47;blog&#47;2020&#47;04&#47;24&#47;analysis-a-shifting-demographic-for-storied-yale-crew-international-athletes-elevate-the-elis&#47;'><img
             alt=' '
@@ -129,7 +128,7 @@ title: Home
 <br>
 <div class="card container mx-auto px-2 mb-4 clearfix header-text">
     <div class="subheader mt-1 py-2"
-         style="display: flex;align-items: center; flex-flow: wrap; justify-content:center; margin-left: 2em">
+         style="display: flex;align-items: center; flex-flow: wrap; justify-content:left; margin-left: 2em">
         <div style="width: 35em; margin-bottom:5em;">
             <ul style="margin-left: 3em">
                 <li>
@@ -144,7 +143,7 @@ title: Home
 </div>
 <div class="card container mx-auto px-2 mb-4 clearfix header-text">
     <div class="subheader mt-1 py-2"
-         style="display: flex;align-items: center; flex-flow: wrap; justify-content:left; margin-left: 2em">
+         style="display: flex;align-items: center; flex-flow: wrap; justify-content:center; margin-left: 2em">
         <div style="width: 35em; margin-bottom:5em;">
             <div class='tableauPlaceholder centered' id='viz1600266083672'
                  style='margin-top: 1em; align-items: center;'>
