rerent background/adding new font

--- a/pages/rerent.html
+++ b/pages/rerent.html
@@ -6,43 +6,29 @@ layout: default
         <img style="max-width: 100%" src="/uploads/rerent_mockup.png" alt="">
     </div>
 
-    <a id="toggle" href="javascript:showhide('menu')" class="section-nav w-button w--current"
-       style="color: black; font-weight: bold; position: fixed; top: 5em; text-align: right; width: auto; display: none;">SHOW
-        / HIDE</a>
-
-    <div id="menu" style="opacity: 1; display: none;" class="section-nav w-clearfix">
-        <a href="#intro" class="section-links intro w-button w--current" style="color: rgb(179, 180, 186);">Background
-            &amp; Context</a>
-        <a href="#process" class="section-links research w-button" style="color: rgb(179, 180, 186);">Development and
-            Design Process</a>
-        <a href="#results" class="section-links results w-button" style="color: rgb(179, 180, 186);">Final Results</a>
-        <a href="#challenges" class="section-links results w-button" style="color: rgb(179, 180, 186);">Challenges &amp;
-            Learnings</a><a href="#final" class="section-links future w-button" style="color: rgb(179, 180, 186);">Final
-        Words</a>
-    </div>
-
     <article class="container mx-auto px-2 mt2 mb4">
         <div class="prose mb-2 py-4">
-            <h1 id="intro">ReRent — Software Development and Product Management</h1>
+            <p style="font-size: 200%" id="intro">ReRent — Software Development and Product Management</p>
             <div style="display: grid;grid-template-columns: repeat(auto-fit, minmax(10rem, 1fr));width: 100%;grid-column-gap: 2em;grid-row-gap: 2em;">
                 <div><h6>Duration</h6>June 2020—Present</div>
                 <div><h6>Tools</h6>Python, Django, PostgreSQL, Heroku, Figma, FlowMapp</div>
-                <div><h6>Key Skills</h6>Web Development, Agile Software Development, Prototyping, User Testing</div>
+                <div><h6>Key Skills</h6>Web Development, Agile Software Development, Prototyping, User Research</div>
             </div>
             <br><br>
-            <p><span class="blue">$4,320</span>. That’s how much money the average college student wastes every year
+            <p style="font-family: 'Open Sans', sans-serif;"><span class="blue">$4,320</span>. That’s how much money the average college student wastes every year
                 paying for rent when they’re
                 away on break. Though most students only need housing for at most 9 months out of the
                 year, high demand and limited options allow landlords to keep leases at 12-months long in many college
                 towns.
-                Operational difficulties — such as cleaning up before and after a guest stays in your home — have made
+                Operational difficulties — such as needing to clean before and after a guest stays in your home — have made
                 home-sharing out of reach for most college students. ReRent was created to take care of all these
                 operational hassles and help students save money on housing.
                 <br><br>
-                DETAIL RERENT'S PREVIOUS OPERATIONS. ALSO DETAIL SUSTAINABILITY/HOUSING EQUITY
+                Launched in 2018, ReRent has successfully booked out <span class="blue">1000+</span> total nights and has served
+                <span class="blue">400+</span> guests. However, all prior services were handled manually — from listing
+                on Airbnb to booking cleaners. Furthermore, ReRent had only been operating in the Yale area as there was no
+                infrastructure to allow for expansion to other schools. FINISH BACKGROUND.
                 <br><br>
-                At ReRent, I had the unique opportunity to work alongside Yale MBA students as well as undergraduates.
-                IN PROGRESS.
             </p>
 
             <div id="problem" style="margin-left: -10em;margin-top: 2em;">
@@ -94,10 +80,10 @@ layout: default
 
     <article class="container mx-auto px-2 mt2 mb4">
         <div class="prose mb-4 pb-4">
-
             <h2 style="margin-top: -1.3em;">Working from home, and the transition from software engineering intern
                 to product manager role</h2>
-
+            At ReRent, I had the unique opportunity to work alongside Yale MBA students as well as undergraduates.
+            IN PROGRESS.
         </div>
     </article>
 
