adding more to rerent page, changing fonts

--- a/pages/rerent.html
+++ b/pages/rerent.html
@@ -1,53 +1,57 @@
 ---
 layout: default
 ---
-<div>
+<div style="align-items: center; max-width: 70%">
     <div>
-        <img style="max-width: 100%" src="/uploads/rerent_mockup.png" alt="">
+        <img style="max-width: 100%; align-items: center" src="/media/rerent_logo.png" alt="">
     </div>
 
     <article class="container mx-auto px-2 mt2 mb4">
         <div class="prose mb-2 py-4">
             <p style="font-size: 200%" id="intro">ReRent — Software Development and Product Management</p>
             <div style="display: grid;grid-template-columns: repeat(auto-fit, minmax(10rem, 1fr));width: 100%;grid-column-gap: 2em;grid-row-gap: 2em;">
-                <div><h6>Duration</h6>June 2020—Present</div>
+                <div><h6>Duration</h6>June 2020 - Present</div>
                 <div><h6>Tools</h6>Python, Django, PostgreSQL, Heroku, Figma, FlowMapp</div>
                 <div><h6>Key Skills</h6>Web Development, Agile Software Development, Prototyping, User Research</div>
             </div>
             <br><br>
             <p style="font-family: 'Open Sans', sans-serif;"><span class="blue">$4,320</span>. That’s how much money the average college student wastes every year
                 paying for rent when they’re
-                away on break. Though most students only need housing for at most 9 months out of the
+                away on break. Though most students only need housing for around 9 months out of the
                 year, high demand and limited options allow landlords to keep leases at 12-months long in many college
                 towns.
                 Operational difficulties — such as needing to clean before and after a guest stays in your home — have made
                 home-sharing out of reach for most college students. ReRent was created to take care of all these
                 operational hassles and help students save money on housing.
                 <br><br>
-                Launched in 2018, ReRent has successfully booked out <span class="blue">1000+</span> total nights and has served
-                <span class="blue">400+</span> guests. However, all prior services were handled manually — from listing
-                on Airbnb to booking cleaners. Furthermore, ReRent had only been operating in the Yale area as there was no
-                infrastructure to allow for expansion to other schools. FINISH BACKGROUND.
+                ReRent has successfully booked out <span class="blue">1000+</span> total nights and has served
+                <span class="blue">400+</span> guests since 2018. However, all prior services were handled manually —
+                from helping students list their places on Airbnb to scheduling cleaners. Furthermore, ReRent had only been
+                operating in the Yale area as there was no infrastructure to allow for expansion to other schools.
+                <span class="blue">My role</span> at ReRent focused on these key questions:
                 <br><br>
             </p>
-
-            <div id="problem" style="margin-left: -10em;margin-top: 2em;">
-                <p class="project-descriptions">Problem</p>
-            </div>
-            <h3 style="text-align: center; margin-top: -1.5em;">How can I make ReRent scalable so we can help more
-                students make the most of their housing? What infrastructure is needed to make home-sharing entirely
-                painless for students?
-            </h3>
+            <h2 style="text-align: center; margin-top: -1.5em;">[ How can I make ReRent scalable so we can help more
+                students across more colleges save money? What infrastructure needs to be built to make home-sharing entirely
+                painless for students? ]
+            </h2>
         </div>
     </article>
 
     <div id="solution">
         <article class="container mx-auto px-2 mt2 mb4">
             <div class="prose mb-4 py-4">
-                <p class="project-descriptions">Solution</p>
-                <h3 style="margin-top: -1.8em; color:white;">Build a web application to be able to reach a
-                    wider customer base. Make interactions seamless and familiar to help students help themselves.
-                </h3>
+                <p class="project-descriptions underline">Solution</p>
+                <p style="font-family: 'Open Sans', sans-serif;">At the start of my internship, I was tasked with helping
+                    develop a web application that gets data from the ReRenter — a.k.a. the student looking to rent out
+                    their home — and distributes it to appropriate ReRent staff for them to handle. Automating this information
+                    distribution would allow ReRent to reach a wider customer base by allowing staff to spend less time
+                    going back and forth with ReRenters, and more time doing the actual work of creating listings on
+                    Airbnb.
+                    <br><br>
+                    <!--Towards the end of the summer, I wa transitioned into a product manager role,
+                    Make interactions seamless and familiar to help students help themselves.-->
+                </p>
             </div>
         </article>
     </div>
@@ -82,8 +86,8 @@ layout: default
         <div class="prose mb-4 pb-4">
             <h2 style="margin-top: -1.3em;">Working from home, and the transition from software engineering intern
                 to product manager role</h2>
-            At ReRent, I had the unique opportunity to work alongside Yale MBA students as well as undergraduates.
-            IN PROGRESS.
+            At the time of my internship, we were a team of 8. The size of the team gave me the unique
+            opportunity to directly see the impact of my work on the product.
         </div>
     </article>
 
@@ -92,8 +96,7 @@ layout: default
             <h2 style="margin-top: -1.3em;">Learning how to conduct formal user interviews</h2>
             <p style="max-width: 24em;margin-right: 1em;">I had never formally run user interviews or conducted
                 usability testing before. Getting to tackle the entire process, from recruiting users, to creating
-                the scripts, to running the sessions was a great learning experience that taught me the art of truly
-                listening to the user and digging deeper into the “why” of their insights.
+                the scripts, to running the sessions was a great learning experience that taught me .
             </p>
         </div>
     </article>
