--- a/index.html
+++ b/index.html
@@ -221,8 +221,8 @@ title: Home
                 <p style="font-size: 200%; margin-top: 2em; margin-bottom: 1em">
                     Published work:
                 </p>
-                <ul style="margin-left: 3em">
-                    <li style="line-height: 1.7; font-family: 'Open Sans', sans-serif; font-size: 90%">
+                <ul>
+                    <li style="margin-left: 3em; line-height: 1.7; font-family: 'Open Sans', sans-serif; font-size: 90%">
                         Mutations in the gene coding for the U2AF1 protein are known to be responsible for many cases of
                         acute myeloid leukemia (AML). However, very little is known about how these mutations lead to disease.
                         Our analysis found that these mutated proteins may cause AML by abnormally modifying other genes
@@ -247,7 +247,7 @@ title: Home
                         <br>
                         <br>
                         <a href="https://ashpublications.org/blood/article/134/Supplement_1/338/426253/In-Vivo-reconstruction-of-Human-Erythropoiesis?searchresult=1"
-                            style="font-size: 110%" target="_blank">
+                            style="font-size: 110%; font-family: 'Alata';" target="_blank">
                             Read abstract <span class="blue">&rarr;</span>
                         </a>
                     </li>
@@ -263,7 +263,7 @@ title: Home
                         <br>
                         <br>
                         <a href="https://ashpublications.org/blood/article/134/Supplement_1/4222/425718/PARP-Inhibitors-Are-Effective-in-IDH1-2-Mutant-MDS?searchresult=1"
-                            style="font-size: 110%" target="_blank">
+                            style="font-size: 110%; font-family: 'Alata';" target="_blank">
                             Read abstract <span class="blue">&rarr;</span>
                         </a>
                     </li>
