--- a/pages/rerent.html
+++ b/pages/rerent.html
@@ -6,14 +6,14 @@ layout: default
          style="display: flex;align-items: center; flex-flow: wrap; justify-content:center;">
         <div style="max-width: 70%">
             <div>
-                <img style="max-width: 20%; align-items: center" src="/media/rerent_logo.png" alt="">
+                <img style="max-width: 30%; justify-content:center;" src="/media/rerent_logo.png" alt="">
             </div>
 
             <article class="container mx-auto px-2 mt2 mb4">
                 <div class="prose mb-2 py-4">
                     <p style="font-size: 200%" id="intro">ReRent — Software Development and Product Management</p>
                     <div style="display: grid;grid-template-columns: repeat(auto-fit, minmax(10rem, 1fr));width: 100%;grid-column-gap: 2em;grid-row-gap: 2em;">
-                        <div><h6>Duration</h6>June 2020 - Present</div>
+                        <div><h6>Timeline</h6>12 weeks<br>June 2020 - Sept. 2020</div>
                         <div><h6>Tools</h6>Python, Django, PostgreSQL, Heroku, Figma, FlowMapp</div>
                         <div><h6>Key Skills</h6>Web Development, Agile Software Development, Prototyping, User Research
                         </div>
@@ -40,8 +40,8 @@ layout: default
                         to meet this demand.
                         <span class="blue">Thus, my role</span> at ReRent focused on these <span
                                 class="blue">key questions</span>:
-                        <br><br>
                     </p>
+                    <br><br>
                     <h2 style="text-align: center; margin-top: -1.5em;">[ How can I make ReRent scalable so we can help
                         more
                         students across more colleges save money? What infrastructure needs to be built to make
@@ -68,7 +68,8 @@ layout: default
                             Airbnb.
                             <br><br>
                             To this end, I worked with my team to develop a
-                            <!--Towards the end of the summer, I wa transitioned into a product manager role,
+                            <!--At a startup, people are known to wear many hats, but I was formally transitioned into a
+                            product manage role in the middle fo the summer.
                             Make interactions seamless and familiar to help students help themselves.-->
                         </p>
                     </div>
